--- a/package.json
+++ b/package.json
@@ -2,28 +2,12 @@
 	"name": "mpco-web",
 	"version": "0.1.0",
 	"private": true,
-	"dependencies": {
-		"@craco/craco": "^7.1.0",
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^13.0.0",
-		"@testing-library/user-event": "^13.2.1",
-		"@types/jest": "^27.0.1",
-		"@types/node": "^16.7.13",
-		"@types/react": "^18.0.0",
-		"@types/react-dom": "^18.0.0",
-		"craco-alias": "^3.0.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.21.0",
-		"react-scripts": "5.0.1",
-		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0"
-	},
 	"scripts": {
 		"start": "craco start",
 		"build": "craco build",
 		"test": "craco test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"lint:fix": "eslint --fix ./src"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -43,6 +27,23 @@
 			"last 1 safari version"
 		]
 	},
+	"dependencies": {
+		"@craco/craco": "^7.1.0",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^13.0.0",
+		"@testing-library/user-event": "^13.2.1",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^16.7.13",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"craco-alias": "^3.0.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.21.0",
+		"react-scripts": "5.0.1",
+		"typescript": "^4.4.2",
+		"web-vitals": "^2.1.0"
+	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
@@ -55,6 +56,7 @@
 		"eslint-plugin-prettier": "^5.0.1",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-unused-imports": "^3.0.0",
 		"prettier": "^3.1.1"
 	}
 }
