--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+		"noImplicitAny": true,
 	},
 	"extends": "./tsconfig.paths.json",
 	"exclude": ["node_modules"],
