--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.21.0",
 		"react-scripts": "5.0.1",
-		"typescript": "^4.4.2",
-		"web-vitals": "^2.1.0"
+		"typescript": "^4.4.2"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
