--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	},
 	"dependencies": {
 		"@craco/craco": "^7.1.0",
+		"@emotion/css": "^11.11.2",
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
@@ -20,8 +23,11 @@
 		"typescript": "^4.4.2"
 	},
 	"devDependencies": {
+		"@emotion/babel-plugin": "^11.11.0",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
+		"autoprefixer": "^10.4.16",
+		"babel-plugin-macros": "^3.1.0",
 		"eslint": "^8.56.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.1.0",
@@ -33,8 +39,16 @@
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
-		"prettier": "^3.1.1"
+		"postcss": "^8.4.33",
+		"prettier": "^3.1.1",
+		"tailwindcss": "^3.4.1",
+		"twin.macro": "^3.4.0"
 	},
+	"babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
+  },
 	"browserslist": {
 		"production": [
 			">0.2%",
