--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 		"jsx": "react-jsx",
 		"noImplicitAny": true,
 	},
-	"extends": "./tsconfig.paths.json",
+	"include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
 	"exclude": ["node_modules"],
-	"include": ["src/**/*.ts", "src/**/*.tsx", "craco.config.js"]
+	"extends": "./tsconfig.paths.json",
 }
