--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 		"@emotion/css": "^11.11.2",
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
+		"@fontsource/roboto": "^5.0.8",
+		"@mui/material": "^5.15.4",
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
-		"@types/react-dom": "^18.0.0",
+		"@types/reactyar-dom": "^18.0.0",
 		"craco-alias": "^3.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -45,10 +47,10 @@
 		"twin.macro": "^3.4.0"
 	},
 	"babelMacros": {
-    "twin": {
-      "preset": "emotion"
-    }
-  },
+		"twin": {
+			"preset": "emotion"
+		}
+	},
 	"browserslist": {
 		"production": [
 			">0.2%",
