--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
 		"noEmit": true,
 		"jsx": "react-jsx",
 		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"strictNullChecks": true
 	},
 	"include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
 	"exclude": ["node_modules"],
