--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,12 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react-jsx",
+		"jsx": "react",
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"strictNullChecks": true
 	},
 	"include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
 	"exclude": ["node_modules"],
-	"extends": "./tsconfig.paths.json",
+	"extends": "./tsconfig.paths.json"
 }
