feat(home): add swiper

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.21.0",
 		"react-scripts": "5.0.1",
+		"swiper": "^11.0.7",
 		"typescript": "^4.4.2"
 	},
 	"devDependencies": {
