--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"craco-alias": "^3.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-feather": "^2.0.10",
 		"react-router-dom": "^6.21.0",
 		"react-scripts": "5.0.1",
 		"swiper": "^11.0.7",
