--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
 		"noImplicitThis": true,
 		"strictNullChecks": true
 	},
-	"include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules"],
 	"extends": "./tsconfig.paths.json"
 }
